Fix: new styles and dark mode

--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -149,20 +149,15 @@
     font-weight: bold;
 }
 
-.old {
-    filter: grayscale(0.5);
-}
-
 .old:before {
     content: "Passé";
-    position: absolute;
     top: 0;
     left: 0;
     background-color: rgba(240, 240, 240, 0.45);
     padding: 3px;
     font-size: 12px;
     font-weight: bold;
-    border-radius: 5px 0 ;
+    border-radius: 5px 5px 0 0;
 }
 
 @media (max-width: 1200px) {
@@ -171,7 +166,8 @@
     }
 
     #calendar .day {
-        min-height: 100%;
+        min-height: 125px;
+        position: relative;
     }
 
     #calendar .day strong span {
@@ -180,8 +176,7 @@
 
     .day:has(div.vacances):after,
     .day:has(div.férié):after {
-        font-size: 100%;
-        content: '';
+        font-size: 125%;
     }
 
     #calendar .event {
@@ -193,21 +188,23 @@
         display:none;
     }
 
-    .old:before,
-    .day:after {
-        position: static;
-        display: block;
-    }
-
     /* afficher tout les events mais pas .férié ou .vacances ou .empty en grand */
     .day:hover .events:has(.event:not(.vacances):not(.férié):not(.empty)) {
         display: block;
         position: absolute;
-        top: 15px;
+        top: 50%;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: auto;
         z-index: 2;
+    }
+
+    body .day:hover .events {
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+
+    body.dark-theme .day:hover .events {
+        background-color: rgba(0, 0, 0, 0.9);
     }
 
     .day:hover .event > span {
